--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@
         </div>
         <div style="text-align: center; margin-top: 20px">
           <a
-            href="https://calendar.google.com/calendar/render?action=TEMPLATE&amp;text=Milan+%26+Anja+Wedding&amp;dates=20250913T120000Z/20250913T220000Z&amp;details=Join+us+in+Banja+Luka+for+the+wedding+celebration!&amp;location=Stara+Ada+Ostrvo,+Banja+Luka,+Bosnia+and+Herzegovina"
+            href="https://https://milankacar.github.io/milan-anja-wedding.ics"
+            download
             style="
               margin-left: 0px;
               background: var(--primary-color);
@@ -518,10 +519,10 @@
               display: inline-block;
               box-shadow: 0 2px 8px #295f4822;
             "
-            target="_blank"
-            ><i class="fa-solid fa-calendar-plus" style="margin-right: 6px"></i
-            >Save</a
           >
+            <i class="fa-solid fa-calendar-plus" style="margin-right: 6px"></i>
+            Save to Phone Calendar
+          </a>
         </div>
         <div
           class="scroll-down"
