--- a/index.html
+++ b/index.html
@@ -501,11 +501,11 @@
             class="fa-solid fa-calendar-heart"
             style="margin-right: 10px; font-size: 1.2em"
           ></i
-          >13th September 2025
+          >13. Septembar 2025
         </div>
         <div style="text-align: center; margin-top: 20px">
           <a
-            href="https://https://milankacar.github.io/milan-anja-wedding.ics"
+            href="https://milankacar.github.io/milan-anja-wedding.ics"
             download
             style="
               margin-left: 0px;
@@ -521,7 +521,7 @@
             "
           >
             <i class="fa-solid fa-calendar-plus" style="margin-right: 6px"></i>
-            Save to Phone Calendar
+            Sacuvaj u kalendar
           </a>
         </div>
         <div
@@ -544,7 +544,7 @@
         class="section-title"
         style="font-size: 2em; line-height: 1.1; text-align: center"
       >
-        You're Invited
+        Pozivamo vas
       </div>
       <div class="divider"></div>
       <p
@@ -560,87 +560,55 @@
       <div class="countdown" data-aos="zoom-in">
         <div class="countdown-item">
           <div class="countdown-number" id="days">00</div>
-          <div>Days</div>
+          <div>Dana</div>
         </div>
         <div class="countdown-item">
           <div class="countdown-number" id="hours">00</div>
-          <div>Hours</div>
+          <div>Sati</div>
         </div>
         <div class="countdown-item">
           <div class="countdown-number" id="minutes">00</div>
-          <div>Minutes</div>
+          <div>Minuta</div>
         </div>
         <div class="countdown-item">
           <div class="countdown-number" id="seconds">00</div>
-          <div>Seconds</div>
+          <div>Sekundi</div>
         </div>
       </div>
     </div>
-    <div class="section" data-aos="fade-up">
-      <div class="section-title">Our Story</div>
-      <div class="divider"></div>
-      <div class="gallery">
-        <div class="photo-frame" data-aos="zoom-in">
-          <img
-            alt="Couple 1"
-            src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&amp;fit=crop&amp;w=400&amp;q=80"
-          />
-        </div>
-        <div class="photo-frame" data-aos="zoom-in" data-aos-delay="100">
-          <img
-            alt="Couple 2"
-            src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&amp;fit=crop&amp;w=400&amp;q=80"
-          />
-        </div>
-        <div class="photo-frame" data-aos="zoom-in" data-aos-delay="200">
-          <img
-            alt="Couple 3"
-            src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&amp;fit=crop&amp;w=400&amp;q=80"
-          />
-        </div>
-      </div>
-      <p style="text-align: center; margin-top: 2em; color: #2d3142">
-        From our first hello to our forever, thank you for being part of our
-        journey.
-      </p>
+
     </div>
     <div class="section" data-aos="fade-up">
       <div class="section-title">Wedding Day Timeline</div>
       <div class="divider"></div>
       <div class="timeline">
+
+        <div class="timeline-item" data-aos="fade-right">
+          <div class="timeline-content">
+            <div class="timeline-icon"><i class="fas fa-church"></i></div>
+            <h3>Crkveno Vjenčanje</h3>
+            <p>15:00 - Crkva Sv. Trojice</p>
+          </div>
+        </div>
         <div class="timeline-item" data-aos="fade-right">
           <div class="timeline-content">
             <div class="timeline-icon"><i class="fas fa-glass-cheers"></i></div>
             <h3>Welcome Drinks</h3>
-            <p>13:00 - Gather &amp; mingle with refreshments</p>
-          </div>
-        </div>
-        <div class="timeline-item" data-aos="fade-left">
-          <div class="timeline-content">
-            <div class="timeline-icon"><i class="fas fa-ring"></i></div>
-            <h3>Ceremony</h3>
-            <p>14:00 - The vows &amp; "I do"</p>
-          </div>
-        </div>
-        <div class="timeline-item" data-aos="fade-right">
-          <div class="timeline-content">
-            <div class="timeline-icon"><i class="fas fa-camera"></i></div>
-            <h3>Photos</h3>
-            <p>15:00 - Capture the memories</p>
+            <p>16:00 - Skup svatova &amp; vaše prvo piće</p>
           </div>
         </div>
         <div class="timeline-item" data-aos="fade-left">
           <div class="timeline-content">
             <div class="timeline-icon"><i class="fas fa-utensils"></i></div>
-            <h3>Dinner</h3>
-            <p>17:00 - Feast &amp; toast</p>
+            <h3>Večera</h3>
+            <p>18:30 - Feast &amp; toast</p>
           </div>
         </div>
         <div class="timeline-item" data-aos="fade-right">
           <div class="timeline-content">
             <div class="timeline-icon"><i class="fas fa-music"></i></div>
             <h3>Party &amp; Dancing</h3>
-            <p>19:00 - Let the celebration begin!</p>
+            <p>20:00 - Žurkaaaaaa!</p>
           </div>
         </div>
       </div>
@@ -659,7 +627,7 @@
         class="section-title"
         style="font-size: 2.2em; letter-spacing: 1.5px"
       >
-        Wedding Location
+        Lokacija
         <span
           style="
             display: inline-block;
@@ -687,11 +655,11 @@
         </span>
         <br />
         <span style="font-size: 1.1em; color: var(--accent-color)">
-          Banja Luka, Bosnia and Herzegovina
+          Banja Luka, Bosnia i Hercegovina
         </span>
         <br />
         <a
-          href="https://goo.gl/maps/6w2t6w6v6w6w6w6w7"
+          href="https://www.google.com/maps?q=Stara+Ada+Ostrvo,+Banja+Luka,+Bosnia+and+Herzegovina"
           rel="noopener"
           style="
             display: inline-block;
@@ -708,7 +676,7 @@
           "
           target="_blank"
         >
-          <i class="fa-solid fa-map-location-dot"></i> View on Google Maps
+          <i class="fa-solid fa-map-location-dot"></i> Vidi na Google Mapama
         </a>
       </div>
       <div
@@ -740,29 +708,29 @@
         "
       >
         <i class="fa-solid fa-clock"></i>
-        <span style="font-weight: 600">Ceremony starts at 14:00</span>
+        <span style="font-weight: 600">Skupljanje svatova je u 16:00</span>
         <br />
         <i class="fa-solid fa-parking"></i>
-        <span>Free parking available</span>
+        <span>Slobodan parking je dostupan</span>
       </div>
     </div>
     <!-- RSVP moved here to the middle of the page -->
     <div class="section rsvp-section" data-aos="fade-up">
-      <div class="rsvp-title">Kindly RSVP</div>
+      <div class="rsvp-title">Potvrdite svoj dolazak</div>
       <div class="divider"></div>
       <div class="rsvp-phones">
-        Please confirm your attendance by phone:<br />
+        Molimo vas da potvrdite svoj dolazak telefonom:<br />
         <i class="fa-solid fa-phone"></i> Milan:
         <a
-          href="tel:+1234567890"
+          href="tel:+4367761437595"
           style="color: inherit; text-decoration: underline"
-          >+123 456 7890</a
+          >+43 677 61437595</a
         ><br />
         <i class="fa-solid fa-phone"></i> Anja:
         <a
-          href="tel:+0987654321"
+          href="tel:+4367761679671"
           style="color: inherit; text-decoration: underline"
-          >+098 765 4321</a
+          >+43 677 61679671</a
         >
       </div>
     </div>
