--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Milan &amp; Anja | Wedding Invitation</title>
+    <title>Milan &amp; Anja | Pozivnica</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
@@ -506,7 +506,6 @@
         <div style="text-align: center; margin-top: 20px">
           <a
             href="https://milankacar.github.io/milan-anja-wedding.ics"
-            download
             style="
               margin-left: 0px;
               background: var(--primary-color);
@@ -521,7 +520,7 @@
             "
           >
             <i class="fa-solid fa-calendar-plus" style="margin-right: 6px"></i>
-            Sacuvaj u kalendar
+            Sačuvaj u kalendar
           </a>
         </div>
         <div
@@ -554,7 +553,7 @@
           max-width: 600px;
           margin: 0 auto;
         "
-      >
+      > da nam svojim prisustvom uljepšate naš dan.
         Slavićemo ljubav i voljeli bismo da budete dio nje!
       </p>
       <div class="countdown" data-aos="zoom-in">
