--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        overflow-x: hidden;
       }
       body {
         min-height: 100vh;
