--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        overflow-x: hidden;
       }
       body {
         min-height: 100vh;
@@ -504,7 +505,7 @@
         </div>
         <div style="text-align: center; margin-top: 20px">
           <a
-            href="https://milankacar.github.io/milan-anja-wedding.ics"
+            href="https://milankacar.github.io/wedding-invitation/milan-anja-wedding.ics"
             style="
               margin-left: 0px;
               background: var(--primary-color);
