--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
       data-aos="fade-down"
       style="
         position: relative;
-        overflow: hidden;
+        overflow-x: hidden;
         height: 100vh;
         display: flex;
         flex-direction: column;
