--- a/index.html
+++ b/index.html
@@ -707,9 +707,6 @@
           font-size: 1.05em;
         "
       >
-        <i class="fa-solid fa-clock"></i>
-        <span style="font-weight: 600">Skupljanje svatova je u 16:00</span>
-        <br />
         <i class="fa-solid fa-parking"></i>
         <span>Slobodan parking je dostupan</span>
       </div>
@@ -719,7 +716,7 @@
       <div class="rsvp-title">Potvrdite svoj dolazak</div>
       <div class="divider"></div>
       <div class="rsvp-phones">
-        Molimo vas da potvrdite svoj dolazak telefonom:<br />
+        Molimo vas da potvrdite svoj dolazak:<br />
         <i class="fa-solid fa-phone"></i> Milan:
         <a
           href="tel:+4367761437595"
