--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 </script>
 <style>
-  @media (max-width: 100%) {
+  @media (max-width: 500px) {
     .countdown {
       flex-direction: column;
       gap: 0px;
@@ -371,7 +371,7 @@
       @media (max-width: 900px) {
         .timeline,
         .section {
-          max-width: 96vw;
+          max-width: 98vw;
           padding: 20px 5vw;
         }
         .timeline-item {
@@ -382,11 +382,11 @@
           gap: 10px;
         }
         .rsvp-section {
-          max-width: 96vw;
+          max-width: 98vw;
           padding: 24px 4vw;
         }
       }
-      @media (max-width: 100%) {
+      @media (max-width: 700px) {
         .timeline::after {
           left: 10px;
         }
@@ -551,7 +551,7 @@
         style="
           text-align: center;
           font-size: 1.2em;
-          max-width: 100%;
+          max-width: 600px;
           margin: 0 auto;
         "
       > da nam svojim prisustvom uljepšate naš dan.
@@ -684,7 +684,7 @@
           border-radius: 16px;
           overflow: hidden;
           box-shadow: 0 4px 18px #295f4822;
-          max-width: 100%;
+          max-width: 600px;
           margin: 0 auto;
         "
       >
