--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!-- Load Dancing Script font with 500 weight -->
-<link
-  href="https://fonts.googleapis.com/css?family=Dancing+Script:500&amp;display=swap"
-  rel="stylesheet"
-/>
 <script>
   // Only run the guest name logic on mobile devices
   function isMobile() {
@@ -53,6 +49,10 @@
       href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat:400,700&amp;display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
@@ -83,7 +83,7 @@
       }
       body {
         min-height: 100vh;
-        font-family: 'Montserrat', Arial, sans-serif;
+        font-family: 'Roboto';
         color: var(--text-color);
         overflow-x: hidden;
       }
