--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Milan &amp; Anja | Pozivnica</title>
+    <title>Anja &amp; Milan | Pozivnica</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
@@ -481,7 +481,7 @@
       <!-- Fullscreen background video (now as the hero background, not fixed to the whole page) -->
       <!-- Unified gradient overlay -->
       <div class="hero-content" style="position: relative; z-index: 2">
-        <h1>Milan &amp; Anja</h1>
+        <h1>Anja &amp; Milan</h1>
         <h2>are getting married!</h2>
         <div
           class="date"
@@ -732,7 +732,7 @@
       </div>
     </div>
     <div class="footer">
-      With love, Milan &amp; Anja — 13<sup>th</sup> September 2025
+    Anja &amp; Milan — 13<sup>th</sup> Septembar 2025
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
