--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
       <div class="rsvp-title">Potvrdite svoj dolazak</div>
       <div class="divider"></div>
       <div class="rsvp-phones">
-        Molimo vas da potvrdite svoj dolazak:<br />
+        Potvrdite svoj dolazak:<br />
         <i class="fa-solid fa-phone"></i> Milan:
         <a
           href="tel:+4367761437595"
