--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
           "
           target="_blank"
         >
-          <i class="fa-solid fa-map-location-dot"></i> Vidi na Google Mapama
+          <i class="fa-solid fa-map-location-dot"></i> Google Maps
         </a>
       </div>
       <div
