--- a/index.html
+++ b/index.html
@@ -628,14 +628,14 @@
           <div class="timeline-content">
             <div class="timeline-icon"><i class="fas fa-utensils"></i></div>
             <h3>Večera</h3>
-            <p>18:30 - Obavezno dođite gladni.</p>
+            <p>Obavezno dođite gladni.</p>
           </div>
         </div>
         <div class="timeline-item" data-aos="fade-left">
           <div class="timeline-content">
             <div class="timeline-icon" style="margin-left: -0.5em"><i class="fas fa-music"></i></div>
             <h3>Party &amp; Dancing</h3>
-            <p>19:00 - Zamjerimo ljudima koji sjednu!</p>
+            <p>Zamjerimo ljudima koji sjede!</p>
           </div>
         </div>
       </div>  
