--- a/index.html
+++ b/index.html
@@ -209,17 +209,17 @@
         margin: 20px auto 0 auto;
         padding: 0 20px;
       }
-      .timeline::after {
-        content: '';
-        position: absolute;
-        width: 3px;
-        background: var(--primary-color);
-        top: 0;
-        bottom: 0;
-        left: 50%;
-        margin-left: -1.5px;
-        z-index: 0;
-      }
+      .timeline::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 6px;
+  background: var(--primary-color);
+  transform: translateX(-50%);
+  z-index: 0;
+}
       .timeline-item {
         padding: 20px 20px;
         position: relative;
@@ -236,7 +236,19 @@
         text-align: left;
       }
       .timeline-content {
-        padding: 24px 28px;
+  padding: 24px 28px 24px 72px;
+
+  padding: 24px;
+  margin-left: 60px;
+  background: #eeeeee;
+  border-radius: 12px;
+  box-shadow: 0px 0px 12px #295f4818;
+  position: relative;
+  display: inline-block;
+  min-width: 200px;
+  transition: transform 0.3s;
+
+        padding: 24px;
         background: #eeeeee;
         border-radius: 12px;
         box-shadow: 0px 0px 12px #295f4818;
@@ -250,6 +262,8 @@
         box-shadow: 0 12px 32px #295f4833;
       }
       .timeline-icon {
+  margin-right: 12px;
+
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -266,9 +280,33 @@
         z-index: 2;
       }
       .timeline-item:nth-child(odd) .timeline-icon {
+  margin-right: 12px;
+
         right: -4px;
       }
-      .timeline-item:nth-child(even) .timeline-icon {
+      .timeline-item {
+        width: 50%;
+    }
+    .timeline-item:nth-child(odd) {
+        left: 0;
+        text-align: right;
+    }
+    .timeline-item:nth-child(odd) .timeline-content {
+  padding: 24px 72px 24px 28px;
+  margin-right: 60px;
+}
+    .timeline-item:nth-child(even) {
+        left: 50%;
+        text-align: left;
+    }
+    .timeline-item:nth-child(even) .timeline-content {
+  padding: 24px 28px 24px 72px;
+
+  margin-left: 60px;
+}
+    .timeline-item:nth-child(even) .timeline-icon {
+  margin-right: 12px;
+
         left: -4px;
       }
       .timeline-content h3 {
@@ -390,14 +428,52 @@
         }
       }
       @media (max-width: 600px) {
-        .timeline::after {
-          left: 10px;
-        }
+  .timeline {
+    padding: 0 10px;
+  }
+  .timeline-item {
+    width: 100% !important;
+    left: 0 !important;
+    text-align: left !important;
+  }
+  .timeline-content {
+    margin: 0 auto !important;
+    padding-left: 72px !important;
+  }
+  .timeline-icon {
+    left: -24px !important;
+    right: auto !important;
+  }
+    .timeline-item {
+        width: 100% !important;
+        left: 0 !important;
+        text-align: left !important;
+    }
+    .timeline-item:nth-child(odd) .timeline-icon,
+    .timeline-item:nth-child(even) .timeline-icon {
+  margin-right: 12px;
+
+        left: -24px !important;
+        right: auto !important;
+    }
+        .timeline::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 6px;
+  background: var(--primary-color);
+  transform: translateX(-50%);
+  z-index: 0;
+}
         .timeline-item {
           width: 50%;
           padding-left: 10px;
         }
         .timeline-icon {
+  margin-right: 12px;
+
           left: -24px !important;
           right: auto !important;
         }
@@ -605,7 +681,7 @@
     </div>
     </div>
     <div>
-    <div class="section" style="overflow: hidden; margin: 1;" data-aos="fade-down">
+    <div class="section" style="overflow: hidden; margin: 60px auto; padding: 40px 20px;" data-aos="fade-down">
       <div class="section-title" style="font-size: 2.5em; line-height: 1.1; text-align: center">Raspored</div>
       <div class="divider"></div>
       <div class="timeline">
@@ -619,7 +695,7 @@
         </div>
         <div class="timeline-item"  data-aos="fade-left">
           <div class="timeline-content" >
-            <div class="timeline-icon"  style="margin-left: -0.5em" ><i class="fas fa-glass-cheers"></i></div>
+            <div class="timeline-icon"  ><i class="fas fa-glass-cheers"></i></div>
             <h3>Welcome Drinks</h3>
             <p>16:00 - Skup svatova &amp; vaše prvo piće</p>
           </div>
@@ -633,7 +709,7 @@
         </div>
         <div class="timeline-item" data-aos="fade-left">
           <div class="timeline-content">
-            <div class="timeline-icon" style="margin-left: -0.5em"><i class="fas fa-music"></i></div>
+            <div class="timeline-icon" ><i class="fas fa-music"></i></div>
             <h3>Party &amp; Dancing</h3>
             <p>Zamjerimo ljudima koji sjede!</p>
           </div>
@@ -792,7 +868,93 @@
       updateCountdown();
       setInterval(updateCountdown, 1000);
     </script>
-  </body>
+  
+
+
+
+<canvas id="fireworks-canvas" style="position: fixed; top: 0; left: 0; pointer-events: none; width: 100vw; height: 100vh; z-index: 5;"></canvas>
+<script>
+const canvas = document.getElementById("fireworks-canvas");
+const ctx = canvas.getContext("2d");
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+window.addEventListener("resize", () => {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+});
+
+const royalColors = ["#b49aff", "#ffd700", "#ffffff", "#a9c9ff", "#f0e6ff"];
+function randomInt(min, max) {
+  return Math.floor(Math.random() * (max - min + 1)) + min;
+}
+function Firework(x, y) {
+  this.x = x;
+  this.y = y;
+  this.particles = [];
+  for (let i = 0; i < 200; i++) {
+    this.particles.push({
+      x: x,
+      y: y,
+      radius: Math.random() * 2.5 + 1,
+      color: royalColors[Math.floor(Math.random() * royalColors.length)],
+      angle: Math.random() * 2 * Math.PI,
+      speed: Math.random() * 7 + 2,
+      alpha: 1,
+      decay: Math.random() * 0.01 + 0.004,
+      twinkle: Math.random() > 0.4
+    });
+  }
+}
+Firework.prototype.update = function () {
+  this.particles.forEach((p) => {
+    p.x += Math.cos(p.angle) * p.speed;
+    p.y += Math.sin(p.angle) * p.speed;
+    p.alpha -= p.decay;
+  });
+};
+Firework.prototype.draw = function () {
+  this.particles.forEach((p, i) => {
+    if (p.alpha > 0) {
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
+      const alphaMod = p.twinkle ? Math.abs(Math.sin(Date.now() * 0.007 + i)) : p.alpha;
+      ctx.fillStyle = `rgba(${hexToRgb(p.color)},${alphaMod})`;
+      ctx.fill();
+    }
+  });
+};
+
+function hexToRgb(hex) {
+  hex = hex.replace("#", "");
+  const bigint = parseInt(hex, 16);
+  return [(bigint >> 16) & 255, (bigint >> 8) & 255, bigint & 255].join(",");
+}
+
+const fireworks = [];
+for (let i = 0; i < 10; i++) {
+  setTimeout(() => {
+    fireworks.push(new Firework(randomInt(80, canvas.width - 80), randomInt(100, canvas.height / 2)));
+  }, i * 250);
+}
+
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  fireworks.forEach((f) => {
+    f.update();
+    f.draw();
+  });
+  requestAnimationFrame(animate);
+}
+animate();
+setTimeout(() => {
+  document.getElementById("fireworks-canvas").style.display = "none";
+}, 5500);
+</script>
+
+
+
+
+</body>
 </html>
 <script>
   // Get guest name from URL (after ? or after ?name=)
