--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
       "
     >
       <source
-        src="https://lh3.googleusercontent.com/gps-cs-s/AC9h4no1GWzSB1uiKN4epjo5TmlI558KO0v2mmHj4tgQ2uH9_GbCLwkqpNUQfU3uxqakiheapbQGvZPWdiJuvRqbNabEDCKJX3ZotlCjqcnt5DrmyChSb1fWkhsYPmdSm7D90he_FgFUPg=m18"
+        src="./wedding-vid.mp4"
         type="video/mp4"
       />
       Your browser does not support the video tag.
