--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
         style="font-size: 2.5em; line-height: 1.1; text-align: center"
         data-i18n="invited"
       >
-        Pozivamo vas
+        Pozivamo
       </div>
       <div class="divider"></div>
       <p
